@@ -2,4 +2,6 @@
 
 $_lang['console'] = 'Console';
 $_lang['console_desc'] = 'Консоль для выполнения php-кода';
+$_lang['console.tab'] = 'Редактор php-кода';
+$_lang['console.exec'] = 'Выполнить';
 
