@@ -1,3 +1,7 @@
+Console-1.2.1-rc
+=============================================================
+- Ace integration fix;
+
 Console-1.2.0-rc
 =============================================================
 - Set default LogTarget('HTML');
